--- a/package.json
+++ b/package.json
@@ -9,11 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/menu": "^2.1.8",
     "@next/font": "13.1.6",
+    "dayjs": "^1.11.7",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "firebase": "^9.16.0",
+    "flowbite": "^1.6.3",
     "next": "13.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "18.2.0",
+    "react-dropdown-select": "^4.9.3",
+    "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^4.7.1",
+    "react-lazy-load-image-component": "^1.5.6",
+    "react-tailwindcss-datepicker": "^1.4.2",
+    "react-toastify": "^9.1.1",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
